# ros-assignment2

./: .gitignore  README.md  REPORT_TEMPLATE.md  RobotStructure.md  TODO.md  frames_2026-04-30_14.30.10.gv  frames_2026-04-30_14.33.08.gv  frames_2026-04-30_14.35.01.gv  gen_bt_diagram.py  report.tex
images/: bt_groot.dot
sampleCode/src/behaviour_tree/: CMakeLists.txt  package.xml
sampleCode/src/behaviour_tree/bt_xml/: bt_tree.xml
sampleCode/src/behaviour_tree/include/behaviour_tree/: DriveX.hpp  GetAlignRotation.hpp  GetDistance.hpp  PoseRecieved.hpp  RotateX.hpp
sampleCode/src/behaviour_tree/src/: DriveX.cpp  GetAlignRotation.cpp  GetDistance.cpp  PoseRecieved.cpp  RotateX.cpp  bt_runner.cpp
sampleCode/src/bt_action_server/: package.xml  setup.cfg  setup.py
sampleCode/src/bt_action_server/bt_action_server/: drive_x_forward.py  rotate_x_server.py
sampleCode/src/bt_bringup/: package.xml  setup.cfg  setup.py
sampleCode/src/bt_bringup/launch/: bt_bringup.launch.py
sampleCode/src/bt_interfaces/: CMakeLists.txt  package.xml
sampleCode/src/bt_interfaces/action/: DriveX.action  RotateX.action
src/rescue_bt/: CMakeLists.txt  package.xml
src/rescue_bt/behavior_trees/: rescue_mission.xml
src/rescue_bt/include/rescue_bt/: bt_nodes.hpp
src/rescue_bt/src/: bt_nodes.cpp  mission_bt_node.cpp
src/search_rescue_robot/: package.xml  setup.cfg  setup.py
src/search_rescue_robot/config/: nav2_params.yaml  ros2_control.yaml
src/search_rescue_robot/launch/: bringup_robot.launch.py  full_system.launch.py  mission.launch.py  mission_launch.py  nav2.launch.py  nav2_launch.py  navigation.launch.py  robot_controller.launch.py  sim.launch.py  sim_launch.py  sim_spawn.launch.py
src/search_rescue_robot/search_rescue_robot/: __init__.py  battery_simulator.py  behavior_tree.py  mission_controller.py  perception_node.py  robot_controller.py  twist_relay.py
src/search_rescue_robot/urdf/: robot.urdf
src/search_rescue_robot/worlds/: assignment_world.sdf
