<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
	<name>search_rescue_robot</name>
	<version>0.0.1</version>
	<description>Search and rescue robot package</description>
	<maintainer email="student@example.com">student</maintainer>
	<license>Apache-2.0</license>

	<buildtool_depend>ament_python</buildtool_depend>

	<depend>rclpy</depend>
	<depend>geometry_msgs</depend>
	<depend>nav_msgs</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>tf2_ros</depend>
	<depend>launch</depend>
	<depend>launch_ros</depend>
	<depend>robot_state_publisher</depend>
	<depend>controller_manager</depend>
	<depend>diff_drive_controller</depend>
	<depend>joint_state_broadcaster</depend>
	<depend>position_controllers</depend>
	<depend>ros_gz_sim</depend>
	<depend>ros_gz_bridge</depend>

	<test_depend>ament_lint_auto</test_depend>
	<test_depend>ament_lint_common</test_depend>
	<test_depend>python3-pytest</test_depend>

	<export>
		<build_type>ament_python</build_type>
	</export>
</package>
