cmake_minimum_required(VERSION 3.8)
project(behaviour_tree)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(rclcpp_action REQUIRED)
find_package(std_msgs REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(behaviortree_cpp_v3 REQUIRED)
find_package(bt_interfaces REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

add_executable(bt_runner
  src/bt_runner.cpp
  src/DriveX.cpp
  src/RotateX.cpp
  src/GetAlignRotation.cpp
  src/GetDistance.cpp
  src/PoseRecieved.cpp
)

target_include_directories(bt_runner
  PUBLIC
    include
)

ament_target_dependencies(bt_runner
  rclcpp
  rclcpp_action
  std_msgs
  nav_msgs
  geometry_msgs
  behaviortree_cpp_v3
  bt_interfaces
)

target_link_libraries(bt_runner
  BT::behaviortree_cpp_v3
)

install(TARGETS bt_runner
  DESTINATION lib/${PROJECT_NAME}
)

install(DIRECTORY include/
  DESTINATION include/
)

install(DIRECTORY bt_xml/
  DESTINATION share/${PROJECT_NAME}/bt_xml
)

install(FILES
  DESTINATION share/${PROJECT_NAME}
)
ament_package()
